tests/ui/lifetimes/lifetime-errors/ex1-return-one-existing-name-early-bound-in-struct.stderr
error[E0621]: explicit lifetime required in the type of `other`
  --> $DIR/ex1-return-one-existing-name-early-bound-in-struct.rs:11:21
   |
LL |                     other
   |                     ^^^^^ lifetime `'a` required
   |
help: add explicit lifetime `'a` to the type of `other`
   |
LL |     fn bar(&self, other: Foo<'a>) -> Foo<'a> {
   |                             ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0621`.
